--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
 }
 
 div.container {
-  width: 720px;
+  width: 716px;
   height: 1000px;
   margin-top: -10px;
   margin-right: auto;
@@ -19,7 +19,7 @@ div.container {
 /* header */
 
 div.header {
-  width: 720px;
+  width: 716px;
   height: 96px;
   display: grid;
   justify-content: center;
@@ -56,7 +56,7 @@ div.menu {
 
 div.section {
   margin: 24px;
-  padding: 24px;
+  padding: 12px;
   border: solid;
   border-color: #3465a3;
 }
@@ -64,6 +64,7 @@ div.section {
 h2.section {
   margin: 0px;
   font-size: 16px;
+  text-align: center;
 }
 
 /* items */
@@ -71,21 +72,24 @@ h2.section {
 div.itemContainer {
   margin: 0px;
   display: flex;
+  flex-wrap: wrap;
 }
 
 div.item {
-  margin-top: 24px;
-  margin-right: 24px;
+  margin-top: 20px;
+  margin-right: 12px;
+  margin-left: 12px;
+  flex-wrap: wrap;
 }
 
 img.item {
-  width: 180px;
-  height: 180px;
+  width: 136px;
+  height: 136px;
   margin: 0px;
 }
 
 h3.item {
-  font-size: 14px;
+  font-size: 12px;
   margin: 0px;
 }
 
